--- a/style.css
+++ b/style.css
@@ -97,4 +97,12 @@ button#toggleTheme:hover {
     background-color: #0056b3;
 }
 
+.anjay {
+    text-align: center;
+    margin-top: 20px;
+    color: #007bff;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+}
 
