--- a/style.css
+++ b/style.css
@@ -106,3 +106,13 @@ button#toggleTheme:hover {
     font-family: 'Courier New', Courier, monospace;
 }
 
+.a1 {
+    text-decoration: none;
+    color: #007bff;
+    font-weight: bold;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
