--- a/index style.css
+++ b/index style.css
@@ -141,5 +141,47 @@ body {
     box-shadow: beige;
 }
 
+/* Media query untuk tablet */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
 
+    .fig1, .pictu {
+        margin: 5px;
+        text-align: center;
+    }
+
+    .button {
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    .project1, .project2, .project3, .project4 {
+        padding: 30px;
+        margin: 50px;
+    }
+}
+
+/* Media query untuk ponsel */
+@media (max-width: 480px) {
+    .fig1 {
+        font-size: 12px;
+    }
+
+    .pictu {
+        width: 100%;
+        height: auto;
+    }
+
+    .button {
+        padding: 6px 12px;
+        font-size: 12px;
+    }
+
+    .project1, .project2, .project3, .project4 {
+        padding: 20px;
+        margin: 30px;
+    }
+}
 
