--- a/index style.css
+++ b/index style.css
@@ -150,7 +150,7 @@ body {
 
     .fig1, .pictu {
         margin: 5px;
-        text-align: center;
+        text-align: left;
     }
 
     .button {
