--- a/index style.css
+++ b/index style.css
@@ -14,6 +14,39 @@ body {
 
 }
 
+.lg1 {
+    width: 50px; /* Atur lebar gambar */
+    height: auto; /* Tinggi akan menyesuaikan secara otomatis */
+    margin: 5px; /* Berikan sedikit ruang di sekitar gambar */
+    transition: transform 0.3s ease; /* Efek transisi untuk hover */
+    animation: fadein 1.5s;
+    filter: invert(100%);
+}
+
+.lg1:hover {
+    transform: scale(1.1); /* Membuat gambar sedikit lebih besar ketika di-hover */
+}
+
+.anjay {
+    display: flex; /* Menggunakan flexbox untuk tata letak */
+    justify-content: center; /* Menyelaraskan item secara horizontal ke tengah */
+    align-items: center; /* Menyelaraskan item secara vertikal ke tengah */
+    flex-wrap: wrap; /* Memungkinkan item bungkus ke baris berikutnya jika tidak cukup ruang */
+    margin: 20px; /* Memberikan sedikit ruang di sekitar <article> */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @keyframes fadein {
     from {transform: translateY(-20px);
         opacity: 0;}
@@ -44,6 +77,7 @@ body {
     margin: auto; /* Pusatkan teks */
     padding: 20px; /* Berikan padding di dalam kotak teks */
     animation: fadein 1.5s;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Gaya dasar */
