--- a/index style.css
+++ b/index style.css
@@ -107,13 +107,19 @@ body {
 
 /* Media query untuk ponsel */
 @media (max-width: 480px) {
+    .article1{
+        flex-direction: column;
+    }
+
     .fig1 {
-        font-size: 14px;
+        font-size: 20px;
+        flex-direction: column;
     }
 
     .pictu {
         width: 100%;
         height: auto;
+        flex-direction: column;
     }
 }
 
