--- a/index style.css
+++ b/index style.css
@@ -32,7 +32,10 @@ body {
     margin: 20px; /* Memberikan sedikit ruang di sekitar <article> */
 }
 
-
+.lg1:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
 
 
 
